--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-multi-carousel": "^2.8.6",
     "three": "^0.181.2",
     "zustand": "^5.0.8"
   },
