--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
     "@react-three/postprocessing": "^3.0.4",
     "@studio-freight/lenis": "^1.0.42",
     "framer-motion": "^12.23.24",
-    "next": "16.0.3",
+    "next": "^16.0.8",
     "postprocessing": "^6.38.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "react-icons": "^5.5.0",
     "react-multi-carousel": "^2.8.6",
     "three": "^0.181.2",
